add name service

--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "author": "",
   "license": "MIT",
   "dependencies": {
+    "Faker": "^0.7.2",
     "body-parser": "^1.13.2",
     "express": "^4.13.1",
     "request": "^2.61.0",
